# faust-dpf-midi-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dsp.dsp  myoptions.txt
src/: DistrhoPluginInfo.h  PluginDSP.cpp  PluginUI.cpp
